# Craft

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  TODO.md  build.bat  buildDebug.bat  buildDebug.sh  buildRelease.bat  buildRelease.sh  builder.py  craft.vcxproj.user.in  format.sh  server.py  world.py
.githooks/: pre-commit
buildInstall/: imgui.ini
buildInstall/server/: server.py
shaders/: block_fragment.glsl  block_vertex.glsl  line_fragment.glsl  sky_fragment.glsl  sky_vertex.glsl  text_fragment.glsl  text_vertex.glsl
src/: auth.c  auth.h  client.c  client.h  config.h.in  cube.c  cube.h  db.c  db.h  gl3_render.c  gl3_render.h  gl_render.c  gl_render.h  gui-gl.cpp  gui-vulkan.cpp  gui.cpp  gui.h  item.c  item.h  main.c  main.h  map.c  map.h  matrix.c  matrix.h  ring.c  ring.h  shaders.h  sign.c  sign.h  util.c  util.h  vulkan_render.c  vulkan_render.h  world.c  world.h
